UI redraw in node editor header missing on pointcache bake #51840

Closed
opened 2017-06-18 15:56:45 +02:00 by Thomas Beck · 4 comments
Member

System Information
Ubuntu 64, i7, 2xGTX1070

Blender Version
Broken: current master

Short description of error
Baking a pointcache (noticed it on smoke sims) does refresh the info header but not the node editor header.

Exact steps for others to reproduce the error
Bake a point cache simulation (particles, smoke, whatever) while having a node editor open. Look at the percentages of the progress bar: The info header is correct while the node editor header is wrong.

Just adding it here for the record (so one can find it and does not re-report) - will grab it myself and fix it.

Best, Thomas

**System Information** Ubuntu 64, i7, 2xGTX1070 **Blender Version** Broken: current master **Short description of error** Baking a pointcache (noticed it on smoke sims) does refresh the info header but not the node editor header. **Exact steps for others to reproduce the error** Bake a point cache simulation (particles, smoke, whatever) while having a node editor open. Look at the percentages of the progress bar: The info header is correct while the node editor header is wrong. Just adding it here for the record (so one can find it and does not re-report) - will grab it myself and fix it. Best, Thomas
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @plasmasolutions

Added subscriber: @plasmasolutions
Thomas Beck self-assigned this 2017-06-18 15:56:53 +02:00

This issue was referenced by f158a206f2

This issue was referenced by f158a206f2dd57079afe4236283b73775c82acaf
Author
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51840
No description provided.