Fix T51840: UI redraw in node editor header missing on pointcache bake

Missing a notifier handler in the node editor